--- a/package.json
+++ b/package.json
@@ -16,16 +16,25 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "formik": "^2.1.4",
     "native-base": "^2.13.12",
+    "querystring": "^0.2.0",
     "react": "16.9.0",
     "react-native": "0.61.2",
+    "react-native-elements": "^1.2.7",
+    "react-native-formik": "^1.7.8",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-material-textfield": "^0.16.1",
+    "react-native-phone-input": "^0.2.4",
     "react-native-root-toast": "^3.2.0",
     "react-navigation": "1.0.0-beta.26",
     "react-navigation-redux-helpers": "1.0.3",
+    "react-phone-number-input": "^3.0.22",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5"
+    "recompose": "^0.30.0",
+    "redux": "^4.0.5",
+    "yup": "^0.28.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
