--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-material-textfield": "^0.16.1",
     "react-native-phone-input": "^0.2.4",
-    "react-native-root-toast": "^3.2.0",
+    "react-native-simple-toast": "^1.0.0",
+    "react-native-spinkit": "^1.5.0",
     "react-navigation": "1.0.0-beta.26",
     "react-navigation-redux-helpers": "1.0.3",
     "react-phone-number-input": "^3.0.22",
