--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     ]
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.7",
+    "@react-navigation/native": "^5.1.4",
+    "@react-navigation/stack": "^5.2.9",
     "axios": "^0.19.2",
     "formik": "^2.1.4",
     "native-base": "^2.13.12",
@@ -27,9 +30,11 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-material-textfield": "^0.16.1",
     "react-native-phone-input": "^0.2.4",
+    "react-native-reanimated": "^1.7.1",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.4.0",
     "react-native-simple-toast": "^1.0.0",
     "react-native-spinkit": "^1.5.0",
-    "react-navigation": "1.0.0-beta.26",
     "react-navigation-redux-helpers": "1.0.3",
     "react-phone-number-input": "^3.0.22",
     "react-redux": "^7.2.0",
