--- a/package.json
+++ b/package.json
@@ -19,17 +19,23 @@
     "@react-navigation/native": "^5.1.4",
     "@react-navigation/stack": "^5.2.9",
     "axios": "^0.19.2",
+    "country-list": "^2.2.0",
     "formik": "^2.1.4",
     "native-base": "^2.13.12",
     "querystring": "^0.2.0",
     "react": "16.9.0",
     "react-native": "0.61.2",
+    "react-native-confirmation-code-input": "^1.0.4",
+    "react-native-country-picker-modal": "^1.10.0",
+    "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^1.2.7",
     "react-native-formik": "^1.7.8",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-image-picker": "^2.3.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-material-textfield": "^0.16.1",
     "react-native-phone-input": "^0.2.4",
+    "react-native-picker-select": "^6.6.0",
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
