--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
     "react-native-simple-toast": "^1.0.0",
+    "react-native-snap-carousel": "^3.9.0",
     "react-native-spinkit": "^1.5.0",
     "react-navigation-redux-helpers": "1.0.3",
     "react-phone-number-input": "^3.0.22",
