--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -183,6 +183,9 @@ dependencies {
     compile "com.android.support:support-v4:27.1.1" // or 27.1.1
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    compile project(':react-native-video')
+    implementation "com.android.support:appcompat-v7:27.1.1"
+
 
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
