--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.19.2",
     "country-list": "^2.2.0",
     "formik": "^2.1.4",
+    "moment": "^2.24.0",
     "native-base": "^2.13.12",
     "querystring": "^0.2.0",
     "react": "16.9.0",
@@ -42,6 +43,7 @@
     "react-native-simple-toast": "^1.0.0",
     "react-native-snap-carousel": "^3.9.0",
     "react-native-spinkit": "^1.5.0",
+    "react-native-video": "^4.4.5",
     "react-navigation-redux-helpers": "1.0.3",
     "react-phone-number-input": "^3.0.22",
     "react-redux": "^7.2.0",
